# Tuning_app

./: README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle  google-services.json  proguard-rules.pro
app/src/androidTest/schemas/com.willeypianotuning.toneanalyzer.store.db.PianoTuningDatabase/: 1.json  2.json  3.json  4.json  5.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/styles/: 1_pure_12th.sty  2_pure_octave.sty  3_pure_5th.sty  4_pure_19th.sty
app/src/main/assets/temperaments/: 01-01 pythagorean.tem  01-02 pythagorean just.tem  01-03 standard just.tem  02-01 aaron.tem  02-02 homogeneus.tem  02-03 zarlino.tem  02-04 salinas.tem  02-05 silbermann.tem  03-01 mersenne-chaumont.tem  03-02 french rousseau.tem  04-01 werckmeister.tem  04-02 prelleur.tem  04-03 neinhardt 5.tem  04-04 neinhardt 8.tem  04-05 vallotti.tem  04-06 kirnberger.tem  04-07 young.tem  04-08 vallotti-young.tem  05-01 kellner-bach.tem  05-02 barnes-bach.tem  05-03 lehman.tem
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/KissFFT/: CMakeLists.txt
app/src/main/cpp/ToneAnalyzer/: IntervalWeights.cpp  IntervalWeights.h  IntervalWidths.cpp  IntervalWidths.h  MathUtils.cpp  MathUtils.h  PeakFinder.cpp  PeakFinder.h  PianoKeyFrequencies.cpp  PianoKeyFrequencies.h  SamplingRateConverter.cpp  SamplingRateConverter.h  Spinner.cpp  Spinner.h  ToneDetector.cpp  ToneDetector.h  ToneDetectorConstants.h  ToneGenerator.cpp  ToneGenerator.h  TuningPartials.cpp  TuningPartials.h  debug_util.cpp  debug_util.h  matrix.h
app/src/main/cpp/ToneAnalyzer/filters/: BandPassFilter.h  SixthOrderBandPassFilter.cpp  SixthOrderBandPassFilter.h
app/src/main/cpp/jni/: SpinnerJni.cpp  ToneDetectorJni.cpp  ToneGeneratorJni.cpp
app/src/main/res/anim/: action_bar_fade_in.xml  action_bar_fade_out.xml  menu_fade_in.xml  menu_fade_out.xml
app/src/main/res/anim-ldrtl/: menu_fade_in.xml  menu_fade_out.xml
app/src/main/res/drawable/: ic_arrow.xml  (+99 more)
gradle/: debug.jks  libs.versions.toml
gradle/scripts/: depUpdates.gradle
gradle/wrapper/: gradle-wrapper.properties
lazystring/: build.gradle.kts
(+380 files in other folders)
